@@ -1,3 +1,7 @@
+2019-01-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Restore ViewHelper compatibility with TYPO3 8, resolves #15
+
 2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Ensure compatibility with TYPO3 9, drop devLog usage, resolves #13
